--- a/src/app/pages/blog-list/blog-list.component.html
+++ b/src/app/pages/blog-list/blog-list.component.html
@@ -1,1 +1,19 @@
-<p>blog-list works!</p>
+<div class="container">
+  <header>
+    <div class="badge">Our blog</div>
+    <h1>Resources and insights</h1>
+    <p>The latest industry news, interviews, technologies, and resources.</p>
+    <div class="search">
+      <img src="assets/icons/Icon.svg" alt="search icon" class="search-icon" />
+      <input type="search" name="" id="" placeholder="Search" />
+    </div>
+  </header>
+  <main>
+    <img src="assets/images/Background-pattern.png" class="background" />
+    <section class="posts">
+      @for(post of posts ; track post) {
+      <app-post-item [post]="post"></app-post-item>
+      }
+    </section>
+  </main>
+</div>
