--- a/src/styles.css
+++ b/src/styles.css
@@ -1,15 +1,19 @@
-
 :root {
-  --primary-color: #ffff;
-  --secondary-color: #6941c6;
+  --primary-background-color: #ffff;
+  --secondary-background-color: #f9f5ff;
+  --purple-text-color: #6941c6;
+  --dark-purple-text-color: #42307d;
+  --badge-color: #f3ebff;
+  --gray: #d0d5dd;
+  --dark-gray: #667085;
 }
 
 body {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  width: 100%;
+  width: 100vw;
   height: 100vh;
-  background-color: var(--primary-color);
+  background-color: var(--primary-background-color);
   font-family: "Inter", sans-serif;
 }
