--- a/src/app/pages/post-item/post-item.component.html
+++ b/src/app/pages/post-item/post-item.component.html
@@ -1,1 +1,15 @@
-<p>post-item works!</p>
+<div class="card">
+  <div><img [src]="post.cover_image" alt="Article Image" class="article-image" />
+  <p class="category">{{ post.tag_list[0] }}</p>
+  <h2>{{ post.title }}</h2>
+  <img src="" alt="" />
+  <p class="description">{{ post.description }}</p>
+</div>
+  <div class="person">
+    <img [src]="post.user.profile_image" alt="User image" class="user-image" />
+    <div>
+      <p class="user-name">{{ post.user.name }}</p>
+      <p class="date">{{ post.published_at | date : "dd MMM yyyy" }}</p>
+    </div>
+  </div>
+</div>
