--- a/src/app/components/post-item/post-item.component.html
+++ b/src/app/components/post-item/post-item.component.html
@@ -1,10 +1,11 @@
 <div class="card">
-  <div><img [src]="post.cover_image" alt="Article Image" class="article-image" />
-  <p class="category">{{ post.tag_list[0] }}</p>
-  <h2>{{ post.title }}</h2>
-  <img src="" alt="" />
-  <p class="description">{{ post.description }}</p>
-</div>
+  <div>
+    <img [src]="post.cover_image" alt="Article Image" class="article-image" />
+    <p class="category">{{ post.tag_list[0] }}</p>
+    <h2>{{ post.title }}</h2>
+    <img src="" alt="" />
+    <p class="description">{{ post.description }}</p>
+  </div>
   <div class="person">
     <img [src]="post.user.profile_image" alt="User image" class="user-image" />
     <div>
