--- a/src/app/components/post-item/post-item.component.html
+++ b/src/app/components/post-item/post-item.component.html
@@ -1,16 +1,22 @@
-<div class="card">
-  <div>
-    <img [src]="post.cover_image" alt="Article Image" class="article-image" />
-    <p class="category">{{ post.tag_list[0] }}</p>
-    <h2>{{ post.title }}</h2>
-    <img src="" alt="" />
-    <p class="description">{{ post.description }}</p>
-  </div>
-  <div class="person">
-    <img [src]="post.user.profile_image" alt="User image" class="user-image" />
-    <div>
-      <p class="user-name">{{ post.user.name }}</p>
-      <p class="date">{{ post.published_at | date : "dd MMM yyyy" }}</p>
+<div class="container">
+  <a [href]="post.url" class="card-link">
+    <div class="card">
+      <div>
+        <img [src]="post.social_image" alt="Article Image" class="article-image" />
+        <p class="category">{{ post.tag_list[0] }}</p>
+        <div class="details">
+          <h2>{{ post.title }}</h2>
+          <img src="assets/icons/arrow-up-right.svg" alt="arrow up right" class="arrow" />
+        </div>
+        <p class="description">{{ post.description }}</p>
+      </div>
+      <div class="person">
+        <img [src]="post.user.profile_image" alt="User image" class="user-image" />
+        <div>
+          <p class="user-name">{{ post.user.name }}</p>
+          <p class="date">{{ post.published_at | date : "dd MMM yyyy" }}</p>
+        </div>
+      </div>
     </div>
-  </div>
+  </a>
 </div>
