--- a/src/app/pages/blog-list/blog-list.component.css
+++ b/src/app/pages/blog-list/blog-list.component.css
@@ -4,14 +4,11 @@
   }
   header {
     background-color: var(--secondary-background-color);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
     height: 375px;
     text-align: center;
     padding: 20px;
     gap: 20px;
+    z-index: -1;
   }
   .badge {
     background-color: var(--badge-color);
@@ -55,14 +52,55 @@
     width: 100%;
     position: absolute;
     top: 400px;
-    z-index: -1;
+    z-index: 0;
+  }
+  main,
+  header {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
   .posts {
     padding: 32px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3);
     justify-items: center;
-    gap: 10px;
+    gap: 25px;
+    z-index: 1;
+  }
+  .load-more-btn {
+    height: 48px;
+    width: 150px;
+    background-color: var(--secondary-background-color);
+    color: var(--purple-text-color);
+    border-style: none;
+    border-radius: 8px;
+    font-weight: 600;
+    cursor: pointer;
+    margin: 20px;
+    font-size: 18px;
+  }
+  .empty {
+    position: absolute;
+  }
+  @media (max-width: 375px){
+     input{
+      max-width: 250px;
+     }
+  }
+  @media (max-width: 768px) {
+    .posts {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      padding: 0px;
+      
+    }
+    .load-more-btn {
+      width: 85%;
+    }
   }
 }
