--- a/src/app/components/error-message/error-message.component.css
+++ b/src/app/components/error-message/error-message.component.css
@@ -4,14 +4,15 @@
     justify-content: center;
     align-items: center;
     gap: 10px;
+    z-index: 1;
   }
   .alert {
     padding: 20px;
-    color: red;
+    color: var(--purple-text-color);
     background-color: var(--primary-background-color);
     width: 100%;
     text-align: center;
     font-size: 18px;
-    box-shadow: 0px 11px 20px 0px var(--gray);
+    box-shadow: 0px 10px 15px 0px var(--dark-gray);
   }
 }
