--- a/src/app/pages/blog-list/blog-list.component.html
+++ b/src/app/pages/blog-list/blog-list.component.html
@@ -11,8 +11,7 @@
       />
       <input
         type="search"
-        name=""
-        id=""
+        name="search"
         placeholder="Search"
         [(ngModel)]="searchText"
       />
