--- a/src/app/components/post-item/post-item.component.css
+++ b/src/app/components/post-item/post-item.component.css
@@ -19,7 +19,7 @@
   }
   .article-image {
     width: 100%;
-    max-height: 123px;
+    height: 125px;
   }
   .category {
     color: var(--purple-text-color);
