--- a/src/app/components/post-item/post-item.component.css
+++ b/src/app/components/post-item/post-item.component.css
@@ -19,7 +19,8 @@
   }
   .article-image {
     width: 100%;
-    max-height:300px
+    max-height:195px;
+    
   }
   .category {
     color: var(--purple-text-color);
@@ -61,6 +62,10 @@
     }
     a {
       font-size: smaller;
+    }
+    .article-image {
+      width:90%;
+      
     }
   }
   @media screen and (max-width: 1280px) and (min-width: 770px) {
