--- a/src/app/components/post-item/post-item.component.css
+++ b/src/app/components/post-item/post-item.component.css
@@ -19,7 +19,7 @@
   }
   .article-image {
     width: 100%;
-    max-height:195px;
+    height:195px;
     
   }
   .category {
@@ -63,10 +63,7 @@
     a {
       font-size: smaller;
     }
-    .article-image {
-      width:90%;
-      
-    }
+    
   }
   @media screen and (max-width: 1280px) and (min-width: 770px) {
     .card {
